Better docs and structure, ready for Edub

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -15,12 +15,12 @@
     <div class="menu-dropdown" id="menuDropdown">
       <a
         href="#"
-        onclick="loadFeature('features/target_allocation_maintenance/index.html','Target Allocation Maintenance')"
+        onclick="loadFeature('target_allocation_maintenance/index.html','Target Allocation Maintenance')"
         >Target Allocation Maintenance</a
       >
       <a
         href="#"
-        onclick="loadFeature('features/feature_2/index.html','Another feature')"
+        onclick="loadFeature('feature_2/index.html','Another feature')"
         >Another feature</a
       >
       <!-- Add more features link here -->
