--- a/src/renderer/target_allocation_maintenance/index.html
+++ b/src/renderer/target_allocation_maintenance/index.html
@@ -26,7 +26,16 @@
       </select>
     </div>
 
-    <button onclick="compute()">Compute</button>
+    <div class="input-group">
+      <button onclick="compute()">Compute</button>
+      <button
+        id="update-config-button"
+        style="display: none"
+        onclick="update_config()"
+      >
+        Update
+      </button>
+    </div>
 
     <h1 id="resultTitle" style="display: none">Result</h1>
 
