feature to update assets configuration

--- a/src/renderer/target_allocation_maintenance/index.html
+++ b/src/renderer/target_allocation_maintenance/index.html
@@ -33,7 +33,7 @@
         style="display: none"
         onclick="update_config()"
       >
-        Update
+        Update quantity
       </button>
     </div>
 
