feat(config): updating config files

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OOOUUUU</title>
 </head>
-<body class="bg-slate-500">
-    <div id="root"></div>
+<body>
+    <!-- <script> global = globalThis</script> -->
+    <div id="root">damn</div>
 </body>
 </html>
