--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OOOUUUU</title>
+    <title>FIN APP</title>
 </head>
 <body>
-    <!-- <script> global = globalThis</script> -->
-    <div id="root">damn</div>
+    <div id="root"></div>
 </body>
 </html>
