--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FIN APP</title>
 </head>
-<body>
+<body style="background-color: #0B0B0B;">
     <div id="root"></div>
 </body>
 </html>
