--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Finances</title>
-</head>
-<body>
-    <div id="root"></div>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            http-equiv="Content-Security-Policy"
+            content="
+                        default-src 'none';
+                        script-src 'self';
+                        connect-src 'self';
+                        img-src 'self' data:;
+                        style-src 'self' 'unsafe-inline';
+                        font-src 'self';
+                        object-src 'none';
+                    "
+        />
+        <title>Finances</title>
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
